# c0re

./: .gitignore  .gitmodules  Makefile  README.md  TODO.txt  bochsrc  grub.cfg  realloc_check
boot/: .print_string.asm.swp  boot.s  boot_sector.asm  disk_load.asm  entering_protected_mode.txt  gdt.asm  gdt.txt  grub.cfg  hexdump.sh  linker.ld  print_char.asm  print_string.asm  print_string_vga.asm  switch_to_pm.asm
common/: debug.h  math_util.h  panic.c  panic.h  types.h
cpu/: descriptor_table_load.asm  gdt.c  gdt.h  idt.c  idt.h  idt_load.asm  irq.c  irq.h  irq_handle.asm  isr.asm  isr.h  isr_handle.asm  port_io.c  port_io.h  timer.c  timer.h  todo.txt  types.h
cpu/multitasking/: context_switch.asm  load_tss.asm  tss.c  tss.h
drivers/: driver_entry.c  driver_entry.h  get_ram_size.asm  keyboard.c  keyboard.h  ps2.c  ps2.h  screen.c  screen.h  serial_io.c  serial_io.h  vga.c  vga.h
drivers/tests/: CMakeLists.txt  Makefile  test_vga.cpp
kernel/: enable_paging.asm  enable_syscall.asm  kernel.c  kernel_entry.asm  kmalloc.c  kmalloc.h  memory_defs.h  memory_layout.txt  pmm.c  pmm.h  port_io.c  process.c  process.h  scheduler.c  scheduler.h  string.c  string.h  syscall_handler.asm  vmm.c  vmm.h
kernel/api/: io.c  io.h  syscall.asm
kernel/kmalloc/: kmalloc.c  kmalloc.h
kernel/tests/: CMakeLists.txt  test_mem_manager.cpp  test_string.cpp  test_vmm.cpp
legacy_boot/: disk_load.asm  print_hex.asm  print_string_vga.asm
user/: stdio.c  stdio.h  surface.c  surface.h  syscall.asm
util/: priority_queue.c  priority_queue.h  spinlock.h  strmap.c  strmap.h
(+8 files in other folders)
